--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,10 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "typeRoots": [
+      "./typings",
+      "./node_modules/@types/"
+    ],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
